--- a/views/home.html
+++ b/views/home.html
@@ -30,38 +30,38 @@
     <div class="container">
         <div>
             <h3>Basado en tu última visita</h3>
-            <img src="images/img-cafetera-moulinex.jpg" alt="">
+            <img src="images/img-cafetera-moulinex.jpg" alt="" width="100%">
             <p>$6.770</p>
             <p>40% OFF</p>
             <h4>Cafetera Moulinex</h4>
-            <img src="images/img-macbook-pro-2019.jpg" alt="">
+            <img src="images/img-macbook-pro-2019.jpg" alt="" width="100%">
             <p>$230.00</p>
             <p>20% OFF</p>
             <h4>Mac Book Pro 2019</h4>
-            <img src="images/img-samsung-galaxy-s10.jpg" alt="">
+            <img src="images/img-samsung-galaxy-s10.jpg" alt="" width="100%">
             <p>$70.500</p>
             <p>10% OFF</p>
             <h4>Samsung Galaxy S10</h4>
-            <img src="images/img-tv-samsung-smart.jpg" alt="">
+            <img src="images/img-tv-samsung-smart.jpg" alt="" width="100%">
             <p>$23.200</p>
             <p>5% OFF</p>
             <h4>Smart TV Samsung 43"</h4>
         </div>
         <div>
             <h3>Sección de ofertas</h3>
-            <img src="images/img-cafetera-moulinex.jpg" alt="">
+            <img src="images/img-cafetera-moulinex.jpg" alt="" width="100%">
             <p>$6.770</p>
             <p>40% OFF</p>
             <h4>Cafetera Moulinex</h4>
-            <img src="images/img-macbook-pro-2019.jpg" alt="">
+            <img src="images/img-macbook-pro-2019.jpg" alt="" width="100%">
             <p>$230.00</p>
             <p>20% OFF</p>
             <h4>Mac Book Pro 2019</h4>
-            <img src="images/img-samsung-galaxy-s10.jpg" alt="">
+            <img src="images/img-samsung-galaxy-s10.jpg" alt="" width="100%">
             <p>$70.500</p>
             <p>10% OFF</p>
             <h4>Samsung Galaxy S10</h4>
-            <img src="images/img-tv-samsung-smart.jpg" alt="">
+            <img src="images/img-tv-samsung-smart.jpg" alt="" width="100%">
             <p>$23.200</p>
             <p>5% OFF</p>
             <h4>Smart TV Samsung 43"</h4>
