--- a/views/home.html
+++ b/views/home.html
@@ -1,85 +1,119 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mercado Liebre</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <title>Home</title>
 </head>
 
 <body>
-    <div class="header">
-        <img src="./images/logo-mercado-liebre.svg" alt="logo-mercado-liebre">
-        <p>Placeholder de búsqueda</p>
-        <P>Comprar en cuotas y sin tarjeta de crédito</P>
-        <div>
+    <header>
+        <a href="home"><img src="images/logo-mercado-liebre.svg" alt=""></a>
+        <span>Lugar para la barra de búsqueda</span>
+        <p>Comprar en cuotas y sin tarjetas</p>
+        <nav>
+
             <ul>
-                <li>Ofertas</li>
-                <li>Tiendas oficiales</li>
-                <li>Vender</li>
-                <li>Ayuda</li>
+                <li><a href="ofertas">Ofertas</a></li>
+                <li><a href="tienda-oficiales">Tiendas Oficiales</a></li>
+                <li><a href="vender">Vender</a></li>
+                <li><a href="ayuda">Ayuda</a></li>
             </ul>
             <ul>
-                <li>Creá tu cuenta</li>
-                <li>Ingresá</li>
-                <li>Mis compras</li>
+                <li><a href="sign-up">Creá tu cuenta</a></li>
+                <li><a href="log-in">Ingresá</a></li>
+                <li><a href="carrito">Mis compras</a></li>
             </ul>
-        </div>
-    </div>
-    <div class="container">
-        <div>
-            <h3>Basado en tu última visita</h3>
-            <img src="images/img-cafetera-moulinex.jpg" alt="">
-            <p>$6.770</p>
-            <p>40% OFF</p>
-            <h4>Cafetera Moulinex</h4>
-            <img src="images/img-macbook-pro-2019.jpg" alt="">
-            <p>$230.00</p>
-            <p>20% OFF</p>
-            <h4>Mac Book Pro 2019</h4>
-            <img src="images/img-samsung-galaxy-s10.jpg" alt="">
-            <p>$70.500</p>
-            <p>10% OFF</p>
-            <h4>Samsung Galaxy S10</h4>
-            <img src="images/img-tv-samsung-smart.jpg" alt="">
-            <p>$23.200</p>
-            <p>5% OFF</p>
-            <h4>Smart TV Samsung 43"</h4>
-        </div>
-        <div>
-            <h3>Sección de ofertas</h3>
-            <img src="images/img-cafetera-moulinex.jpg" alt="">
-            <p>$6.770</p>
-            <p>40% OFF</p>
-            <h4>Cafetera Moulinex</h4>
-            <img src="images/img-macbook-pro-2019.jpg" alt="">
-            <p>$230.00</p>
-            <p>20% OFF</p>
-            <h4>Mac Book Pro 2019</h4>
-            <img src="images/img-samsung-galaxy-s10.jpg" alt="">
-            <p>$70.500</p>
-            <p>10% OFF</p>
-            <h4>Samsung Galaxy S10</h4>
-            <img src="images/img-tv-samsung-smart.jpg" alt="">
-            <p>$23.200</p>
-            <p>5% OFF</p>
-            <h4>Smart TV Samsung 43"</h4>
-        </div>
-    </div>
-    <div class="footer">
-        <h4>Pagá con tarjeta o en efectivo</h4>
-        <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
-            puntos de pago. ¡Y siempre es seguro!</p>
-        <h4>Envíos gratis desde $2.500</h4>
-        <p>Solo por estar registrado en Mercado Liebre tenés envíos gratis en miles de
-            productos. Es un beneficio de Mercado Puntos.</p>
-        <h4>Seguridad, de principio a fin</h4>
-        <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-            porque estás siempre protegido.</p>
-        <h5>Copyright © 1997-2022 MercadoLiebre S.R.L.</h4>
-    </div>
+        </nav>
+    </header>
+    <main>
+        <img src="/images/img-home-banner.jpg" alt="" width="100%">
+        <section>
+            <h4>Basado en tu última visita</h4>
+            <article>
+                <img src="/images/img-cafetera-moulinex.jpg" alt="" width="100%">
+                <p>$6.770</p>
+                <p>40% OFF</p>
+                <h5>Cafetera Moulinex</h5>
+            </article>
+            <article>
+                <img src="images/img-macbook-pro-2019.jpg" alt="" width="100%">
+                <p>$230.00</p>
+                <p>20% OFF</p>
+                <h5>Mac Book Pro 2019</h5>
+            </article>
+            <article>
+                <img src="images/img-samsung-galaxy-s10.jpg" alt="" width="100%">
+                <p>$70.500</p>
+                <p>10% OFF</p>
+                <h5>Samsung Galaxy S10</h5>
+            </article>
+            <article>
+                <img src="images/img-tv-samsung-smart.jpg" alt="" width="100%">
+                <p>$23.200</p>
+                <p>5% OFF</p>
+                <h5>Smart TV Samsung 43"</h5>
+            </article>
+            <h4>Ofertas</h4>
+            <article>
+                <img src="/images/img-cafetera-moulinex.jpg" alt="" width="100%">
+                <p>$6.770</p>
+                <p>40% OFF</p>
+                <h5>Cafetera Moulinex</h5>
+            </article>
+            <article>
+                <img src="images/img-macbook-pro-2019.jpg" alt="" width="100%">
+                <p>$230.00</p>
+                <p>20% OFF</p>
+                <h5>Mac Book Pro 2019</h5>
+            </article>
+            <article>
+                <img src="images/img-samsung-galaxy-s10.jpg" alt="" width="100%">
+                <p>$70.500</p>
+                <p>10% OFF</p>
+                <h5>Samsung Galaxy S10</h5>
+            </article>
+            <article>
+                <img src="images/img-tv-samsung-smart.jpg" alt="" width="100%">
+                <p>$23.200</p>
+                <p>5% OFF</p>
+                <h5>Smart TV Samsung 43"</h5>
+            </article>
+        </section>
+    </main>
+    <!-- 
+
+● 
+
+
+7
+
+● 
+
+● 
+ -->
+    <footer>
+        <article>
+            <h4>Pagá con tarjeta o en efectivo</h4>
+            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+                puntos de pago. ¡Y siempre es seguro!</p>
+        </article>
+        <article>
+            <h4>Envío gratis desde $ 2.500</h4>
+            <p>Solo por estar registrado en Mercado Liebre tenés envíos gratis en miles de
+                productos. Es un beneficio de Mercado Puntos.</p>
+        </article>
+        <article>
+            <h4>Seguridad, de principio a fin</h4>
+            <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                porque estás siempre protegido.</p>
+        </article>
+        <article>
+            <h4>Copyright ©️ 1999-2020 MercadoLiebre S.R.L.</h4>
+        </article>
+    </footer>
 </body>
 
 </html>
