home estructurado, estilos agregados

--- a/views/home.html
+++ b/views/home.html
@@ -5,34 +5,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Mercado Liebre</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet" />
+
 </head>
 
 <body>
     <header>
-        <a href="home"><img src="images/logo-mercado-liebre.svg" alt=""></a>
-        <span>Lugar para la barra de búsqueda</span>
-        <p>Comprar en cuotas y sin tarjetas</p>
+        <div class="logo">
+            <a href="home"><img src="images/logo-mercado-liebre.svg" alt=""></a>
+        </div>
+        <div class="busqueda">
+            <input type="search" placeholder="Buscar productos, marcas...">
+            <button><i class="fas fa-magnifying-glass"></i></button>
+        </div>
+        <p><i class="fas fa-hand-holding-dollar"></i>Comprar en cuotas y sin tarjetas de crédito</p>
         <nav>
 
-            <ul>
+            <ul class="lista-superior">
                 <li><a href="ofertas">Ofertas</a></li>
                 <li><a href="tienda-oficiales">Tiendas Oficiales</a></li>
                 <li><a href="vender">Vender</a></li>
                 <li><a href="ayuda">Ayuda</a></li>
             </ul>
-            <ul>
-                <li><a href="sign-up">Creá tu cuenta</a></li>
-                <li><a href="log-in">Ingresá</a></li>
-                <li><a href="carrito">Mis compras</a></li>
+            <ul class="lista-inferior">
+                <li><a href="sign-up">Creá tu cuenta <i class="fa-regular fa-id-card"></i></a></li>
+                <li><a href="log-in">Ingresá <i class="fa-solid fa-arrow-right-to-bracket"></i></a></li>
+                <li><a href="carrito">Mis compras <i class="fa-solid fa-basket-shopping"></i></a></li>
             </ul>
         </nav>
+        <div class="burger-menu">
+            <i class="fas fa-bars"></i>
+        </div>
     </header>
-    <main>
-        <img src="/images/img-home-banner.jpg" alt="" width="100%">
-        <section>
-            <h4>Basado en tu última visita</h4>
-            <article>
+
+    <main class="home__productos">
+        <img class="banner" src="/images/img-home-banner.jpg" alt="" width="100%">
+        <section class="seccion__productos">
+            <h4 class="seccion__productos--titulo">Basado en tu última visita</h4>
+            <article class="seccion__productos--tarjetas">
                 <img src="/images/img-cafetera-moulinex.jpg" alt="" width="100%">
                 <p>$6.770</p>
                 <p>40% OFF</p>
@@ -83,36 +95,27 @@
             </article>
         </section>
     </main>
-    <!-- 
 
-● 
-
-
-7
-
-● 
-
-● 
- -->
     <footer>
         <article>
+            <i class="fa-solid fa-credit-card"></i>
             <h4>Pagá con tarjeta o en efectivo</h4>
             <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
                 puntos de pago. ¡Y siempre es seguro!</p>
         </article>
         <article>
             <h4>Envío gratis desde $ 2.500</h4>
+            <i class="fa-solid fa-gift"></i>
             <p>Solo por estar registrado en Mercado Liebre tenés envíos gratis en miles de
                 productos. Es un beneficio de Mercado Puntos.</p>
         </article>
         <article>
             <h4>Seguridad, de principio a fin</h4>
+            <i class="fa-solid fa-user-shield"></i>
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                 porque estás siempre protegido.</p>
         </article>
-        <article>
-            <h4>Copyright ©️ 1999-2020 MercadoLiebre S.R.L.</h4>
-        </article>
+        <span>Copyright ©️ 1999-2020 MercadoLiebre S.R.L.</span>
     </footer>
 </body>
 
