--- a/views/home.html
+++ b/views/home.html
@@ -41,57 +41,73 @@
     </header>
 
     <main class="home__productos">
-        <img class="banner" src="/images/img-home-banner.jpg" alt="" width="100%">
+        <img class="banner" src="/images/img-home-banner.jpg" alt="">
         <section class="seccion__productos">
             <h4 class="seccion__productos--titulo">Basado en tu última visita</h4>
             <article class="seccion__productos--tarjetas">
-                <img src="/images/img-cafetera-moulinex.jpg" alt="" width="100%">
-                <p>$6.770</p>
-                <p>40% OFF</p>
-                <h5>Cafetera Moulinex</h5>
+                <img src="/images/img-cafetera-moulinex.jpg" alt="">
+                <div><i class="fa-solid fa-truck"></i>
+                    <p>$6.770</p>
+                    <p>40% OFF</p>
+                    <h5>Cafetera Moulinex</h5>
+                </div>
             </article>
-            <article>
-                <img src="images/img-macbook-pro-2019.jpg" alt="" width="100%">
-                <p>$230.00</p>
-                <p>20% OFF</p>
-                <h5>Mac Book Pro 2019</h5>
+            <article class="seccion__productos--tarjetas">
+                <img src="images/img-macbook-pro-2019.jpg" alt="">
+                <div><i class="fa-solid fa-truck"></i>
+                    <p>$230.00</p>
+                    <p>20% OFF</p>
+                    <h5>Mac Book Pro 2019</h5>
+                </div>
             </article>
-            <article>
-                <img src="images/img-samsung-galaxy-s10.jpg" alt="" width="100%">
-                <p>$70.500</p>
-                <p>10% OFF</p>
-                <h5>Samsung Galaxy S10</h5>
+            <article class="seccion__productos--tarjetas">
+                <img src="images/img-samsung-galaxy-s10.jpg" alt="">
+                <div><i class="fa-solid fa-truck"></i>
+                    <p>$70.500</p>
+                    <p>10% OFF</p>
+                    <h5>Samsung Galaxy S10</h5>
+                </div>
             </article>
-            <article>
-                <img src="images/img-tv-samsung-smart.jpg" alt="" width="100%">
-                <p>$23.200</p>
-                <p>5% OFF</p>
-                <h5>Smart TV Samsung 43"</h5>
+            <article class="seccion__productos--tarjetas">
+                <img src="images/img-tv-samsung-smart.jpg" alt="">
+                <div><i class="fa-solid fa-truck"></i>
+                    <p>$23.200</p>
+                    <p>5% OFF</p>
+                    <h5>Smart TV Samsung 43"</h5>
+                </div>
             </article>
             <h4>Ofertas</h4>
-            <article>
-                <img src="/images/img-cafetera-moulinex.jpg" alt="" width="100%">
-                <p>$6.770</p>
-                <p>40% OFF</p>
-                <h5>Cafetera Moulinex</h5>
+            <article class="seccion__productos--tarjetas">
+                <img src="/images/img-cafetera-moulinex.jpg" alt="">
+                <div><i class="fa-solid fa-truck"></i>
+                    <p>$6.770</p>
+                    <p>40% OFF</p>
+                    <h5>Cafetera Moulinex</h5>
+                </div>
             </article>
-            <article>
-                <img src="images/img-macbook-pro-2019.jpg" alt="" width="100%">
-                <p>$230.00</p>
-                <p>20% OFF</p>
-                <h5>Mac Book Pro 2019</h5>
+            <article class="seccion__productos--tarjetas">
+                <img src="images/img-macbook-pro-2019.jpg" alt="">
+                <div><i class="fa-solid fa-truck"></i>
+                    <p>$230.00</p>
+                    <p>20% OFF</p>
+                    <h5>Mac Book Pro 2019</h5>
+                </div>
             </article>
-            <article>
-                <img src="images/img-samsung-galaxy-s10.jpg" alt="" width="100%">
-                <p>$70.500</p>
-                <p>10% OFF</p>
-                <h5>Samsung Galaxy S10</h5>
+            <article class="seccion__productos--tarjetas">
+                <img src="images/img-samsung-galaxy-s10.jpg" alt="">
+                <div><i class="fa-solid fa-truck"></i>
+                    <p>$70.500</p>
+                    <p>10% OFF</p>
+                    <h5>Samsung Galaxy S10</h5>
+                </div>
             </article>
-            <article>
-                <img src="images/img-tv-samsung-smart.jpg" alt="" width="100%">
-                <p>$23.200</p>
-                <p>5% OFF</p>
-                <h5>Smart TV Samsung 43"</h5>
+            <article class="seccion__productos--tarjetas">
+                <img src="images/img-tv-samsung-smart.jpg" alt="">
+                <div><i class="fa-solid fa-truck"></i>
+                    <p>$23.200</p>
+                    <p>5% OFF</p>
+                    <h5>Smart TV Samsung 43"</h5>
+                </div>
             </article>
         </section>
     </main>
