--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,6 +72,10 @@ header p {
     margin-bottom: 15px;
 }
 
+header nav {
+    display: none;
+}
+
 header nav ul.lista-superior {
     margin-bottom: 15px;
 }
@@ -110,6 +114,7 @@ main section article div {
     border-top: 1px solid var(--grisC);
     padding: 15px;
     background-color: white;
+    display: none;
 }
 
 main section article p {
@@ -147,4 +152,20 @@ footer article i {
 
 footer span {
     font-size: var(--parrafos);
+}
+
+
+@media (min-width: 361px) {
+    header nav {
+        display: block;
+    }
+
+    header div.burger-menu {
+        display: none;
+    }
+
+    main section article div {
+        display: block;
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    }
 }
