--- a/views/home.html
+++ b/views/home.html
@@ -46,7 +46,8 @@
             <h4 class="seccion__productos--titulo">Basado en tu última visita</h4>
             <article class="seccion__productos--tarjetas">
                 <img src="/images/img-cafetera-moulinex.jpg" alt="">
-                <div><i class="fa-solid fa-truck"></i>
+                <div class="descripcion">
+                    <i class="fa-solid fa-truck"></i>
                     <p>$6.770</p>
                     <p>40% OFF</p>
                     <h5>Cafetera Moulinex</h5>
@@ -54,7 +55,8 @@
             </article>
             <article class="seccion__productos--tarjetas">
                 <img src="images/img-macbook-pro-2019.jpg" alt="">
-                <div><i class="fa-solid fa-truck"></i>
+                <div>
+                    <i class="fa-solid fa-truck"></i>
                     <p>$230.00</p>
                     <p>20% OFF</p>
                     <h5>Mac Book Pro 2019</h5>
@@ -62,7 +64,8 @@
             </article>
             <article class="seccion__productos--tarjetas">
                 <img src="images/img-samsung-galaxy-s10.jpg" alt="">
-                <div><i class="fa-solid fa-truck"></i>
+                <div>
+                    <i class="fa-solid fa-truck"></i>
                     <p>$70.500</p>
                     <p>10% OFF</p>
                     <h5>Samsung Galaxy S10</h5>
@@ -70,7 +73,8 @@
             </article>
             <article class="seccion__productos--tarjetas">
                 <img src="images/img-tv-samsung-smart.jpg" alt="">
-                <div><i class="fa-solid fa-truck"></i>
+                <div>
+                    <i class="fa-solid fa-truck"></i>
                     <p>$23.200</p>
                     <p>5% OFF</p>
                     <h5>Smart TV Samsung 43"</h5>
@@ -79,7 +83,8 @@
             <h4>Ofertas</h4>
             <article class="seccion__productos--tarjetas">
                 <img src="/images/img-cafetera-moulinex.jpg" alt="">
-                <div><i class="fa-solid fa-truck"></i>
+                <div>
+                    <i class="fa-solid fa-truck"></i>
                     <p>$6.770</p>
                     <p>40% OFF</p>
                     <h5>Cafetera Moulinex</h5>
@@ -87,7 +92,8 @@
             </article>
             <article class="seccion__productos--tarjetas">
                 <img src="images/img-macbook-pro-2019.jpg" alt="">
-                <div><i class="fa-solid fa-truck"></i>
+                <div>
+                    <i class="fa-solid fa-truck"></i>
                     <p>$230.00</p>
                     <p>20% OFF</p>
                     <h5>Mac Book Pro 2019</h5>
@@ -95,7 +101,8 @@
             </article>
             <article class="seccion__productos--tarjetas">
                 <img src="images/img-samsung-galaxy-s10.jpg" alt="">
-                <div><i class="fa-solid fa-truck"></i>
+                <div>
+                    <i class="fa-solid fa-truck"></i>
                     <p>$70.500</p>
                     <p>10% OFF</p>
                     <h5>Samsung Galaxy S10</h5>
@@ -103,7 +110,8 @@
             </article>
             <article class="seccion__productos--tarjetas">
                 <img src="images/img-tv-samsung-smart.jpg" alt="">
-                <div><i class="fa-solid fa-truck"></i>
+                <div>
+                    <i class="fa-solid fa-truck"></i>
                     <p>$23.200</p>
                     <p>5% OFF</p>
                     <h5>Smart TV Samsung 43"</h5>
