--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,18 +56,18 @@ header {
     padding: 25px 0;
 }
 
-header div.logo {
+header div div.logo {
     width: 130px;
     margin-left: 25px;
 }
 
-header div.busqueda {
+header div div.busqueda {
     margin-left: 15px;
     width: 170px;
     margin-bottom: 10px;
 }
 
-header p {
+header div p {
     text-align: center;
     margin-bottom: 15px;
 }
@@ -154,8 +154,30 @@ footer span {
 
 
 @media (min-width: 361px) {
+    header div.container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    header div.container div.busqueda {
+        display: flex;
+    }
+
+    header div.busqueda button {
+        border: none;
+        padding: 6px;
+    }
+
     header nav {
-        display: block;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    header nav ul {
+        display: flex;
+        justify-content: space-around;
+        padding: 0 2rem;
     }
 
     header div.burger-menu {
