--- a/views/home.html
+++ b/views/home.html
@@ -13,14 +13,16 @@
 
 <body>
     <header>
-        <div class="logo">
-            <a href="home"><img src="images/logo-mercado-liebre.svg" alt=""></a>
+        <div class="container">
+            <div class="logo">
+                <a href="home"><img src="images/logo-mercado-liebre.svg" alt=""></a>
+            </div>
+            <div class="busqueda">
+                <input type="search" placeholder="Buscar productos, marcas...">
+                <button><i class="fas fa-magnifying-glass"></i></button>
+            </div>
+            <p><i class="fas fa-hand-holding-dollar"></i>Comprar en cuotas y sin tarjetas de crédito</p>
         </div>
-        <div class="busqueda">
-            <input type="search" placeholder="Buscar productos, marcas...">
-            <button><i class="fas fa-magnifying-glass"></i></button>
-        </div>
-        <p><i class="fas fa-hand-holding-dollar"></i>Comprar en cuotas y sin tarjetas de crédito</p>
         <nav>
 
             <ul class="lista-superior">
