--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,6 +26,7 @@
     margin: 0;
     padding: 0;
     font-family: var(--fuente);
+    box-sizing: border-box;
 }
 
 a {
@@ -56,18 +57,41 @@ header {
     padding: 25px 0;
 }
 
+header div.container {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap:nowrap;
+}
+
 header div div.logo {
-    width: 130px;
-    margin-left: 25px;
+    width: 50%;
 }
 
 header div div.busqueda {
-    margin-left: 15px;
-    width: 170px;
+    width: 50%;
     margin-bottom: 10px;
+    display: flex;
+    border: none;
+    padding: 6px;
 }
 
-header div p {
+header div div.busqueda input {
+    width: 80%;
+    max-height: 36px;
+}
+
+header div div.busqueda button {
+    width: 20%;
+    max-width: 36px;
+    max-height: 36px;
+    border: none;
+    padding: 10px;
+    text-align: center;
+}
+
+header p {
     text-align: center;
     margin-bottom: 15px;
 }
@@ -88,7 +112,7 @@ header div.burger-menu {
     background-color: var(--celeste);
     border-radius: 5px;
     color: white;
-    width: 20px;
+    width: 30px;
     padding: 7px;
     /* cuando margin tiene dos valores, el izq es top-bottom,
     el der es left-right */
@@ -104,29 +128,58 @@ main.home__productos {
     width: 90%;
     margin-left: auto;
     margin-right: auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
-main section article {
+main section article.seccion__productos--tarjetas {
     padding: 5px;
+    max-width: 320px;
+    display: inline-block;
 }
 
-main section article div {
+main section article div.descripcion {
     border-top: 1px solid var(--grisC);
     padding: 15px;
     background-color: white;
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
 }
 
-main section article p {
+main section article div i {
+    color: var(--verde);
+    border: 1px solid;
+    border-radius: 50%;
+    display: flex;
+    font-size: 16px;
+    padding: 5px;
+    position: absolute;
+    right: 20px;
+    top: -15px;
+    width: 30px;
+    height: 30px;
+}
+
+main section article div p {
     font-size: var(--precio);
+}
+
+main section article div p.precio {
+    display: block;
+    width: 30%;
+}
+
+main section article div p.descuento {
+    display: block;
+    width: 70%;
+    color: var(--verde)
 }
 
 main section article h5 {
     font-size: var(--descripcciones);
-    display: none;
 }
-
-/* PRODUCTOS */
-
 
 
 /* FOOTER */
@@ -154,21 +207,6 @@ footer span {
 
 
 @media (min-width: 361px) {
-    header div.container {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-    }
-
-    header div.container div.busqueda {
-        display: flex;
-    }
-
-    header div.busqueda button {
-        border: none;
-        padding: 6px;
-    }
-
     header nav {
         display: flex;
         justify-content: space-between;
@@ -188,6 +226,6 @@ footer span {
         box-shadow: 0px 0px 10px rgb(100, 100, 100);
     }
     main section article h5 {
-        display: block;
+        display: flex;
     }
 }
