--- a/views/home.html
+++ b/views/home.html
@@ -21,8 +21,8 @@
                 <input type="search" placeholder="Buscar productos, marcas...">
                 <button><i class="fas fa-magnifying-glass"></i></button>
             </div>
-            <p><i class="fas fa-hand-holding-dollar"></i>Comprar en cuotas y sin tarjetas de crédito</p>
         </div>
+        <p><i class="fas fa-hand-holding-dollar"></i>Comprar en cuotas y sin tarjetas de crédito</p>
         <nav>
 
             <ul class="lista-superior">
@@ -50,72 +50,72 @@
                 <img src="/images/img-cafetera-moulinex.jpg" alt="">
                 <div class="descripcion">
                     <i class="fa-solid fa-truck"></i>
-                    <p>$6.770</p>
-                    <p>40% OFF</p>
+                    <p class="precio">$6.770</p>
+                    <p class="descuento">40% OFF</p>
                     <h5>Cafetera Moulinex</h5>
                 </div>
             </article>
             <article class="seccion__productos--tarjetas">
                 <img src="images/img-macbook-pro-2019.jpg" alt="">
-                <div>
+                <div class="descripcion">
                     <i class="fa-solid fa-truck"></i>
-                    <p>$230.00</p>
-                    <p>20% OFF</p>
+                    <p class="precio">$230.00</p>
+                    <p class="descuento">20% OFF</p>
                     <h5>Mac Book Pro 2019</h5>
                 </div>
             </article>
             <article class="seccion__productos--tarjetas">
                 <img src="images/img-samsung-galaxy-s10.jpg" alt="">
-                <div>
+                <div class="descripcion">
                     <i class="fa-solid fa-truck"></i>
-                    <p>$70.500</p>
-                    <p>10% OFF</p>
+                    <p class="precio">$70.500</p>
+                    <p class="descuento">10% OFF</p>
                     <h5>Samsung Galaxy S10</h5>
                 </div>
             </article>
             <article class="seccion__productos--tarjetas">
                 <img src="images/img-tv-samsung-smart.jpg" alt="">
-                <div>
+                <div class="descripcion">
                     <i class="fa-solid fa-truck"></i>
-                    <p>$23.200</p>
-                    <p>5% OFF</p>
+                    <p class="precio">$23.200</p>
+                    <p class="descuento">5% OFF</p>
                     <h5>Smart TV Samsung 43"</h5>
                 </div>
             </article>
             <h4>Ofertas</h4>
             <article class="seccion__productos--tarjetas">
                 <img src="/images/img-cafetera-moulinex.jpg" alt="">
-                <div>
+                <div class="descripcion">
                     <i class="fa-solid fa-truck"></i>
-                    <p>$6.770</p>
-                    <p>40% OFF</p>
+                    <p class="precio">$6.770</p>
+                    <p class="descuento">40% OFF</p>
                     <h5>Cafetera Moulinex</h5>
                 </div>
             </article>
             <article class="seccion__productos--tarjetas">
                 <img src="images/img-macbook-pro-2019.jpg" alt="">
-                <div>
+                <div class="descripcion">
                     <i class="fa-solid fa-truck"></i>
-                    <p>$230.00</p>
-                    <p>20% OFF</p>
+                    <p class="precio">$230.00</p>
+                    <p class="descuento">20% OFF</p>
                     <h5>Mac Book Pro 2019</h5>
                 </div>
             </article>
             <article class="seccion__productos--tarjetas">
                 <img src="images/img-samsung-galaxy-s10.jpg" alt="">
-                <div>
+                <div class="descripcion">
                     <i class="fa-solid fa-truck"></i>
-                    <p>$70.500</p>
-                    <p>10% OFF</p>
+                    <p class="precio">$70.500</p>
+                    <p class="descuento">10% OFF</p>
                     <h5>Samsung Galaxy S10</h5>
                 </div>
             </article>
             <article class="seccion__productos--tarjetas">
                 <img src="images/img-tv-samsung-smart.jpg" alt="">
-                <div>
+                <div class="descripcion">
                     <i class="fa-solid fa-truck"></i>
-                    <p>$23.200</p>
-                    <p>5% OFF</p>
+                    <p class="precio">$23.200</p>
+                    <p class="descuento">5% OFF</p>
                     <h5>Smart TV Samsung 43"</h5>
                 </div>
             </article>
