--- a/views/home.html
+++ b/views/home.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercado Liebre</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/home.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet" />
 
 </head>
@@ -21,8 +21,8 @@
                 <input type="search" placeholder="Buscar productos, marcas...">
                 <button><i class="fas fa-magnifying-glass"></i></button>
             </div>
+            <p><i class="fas fa-hand-holding-dollar"></i>Comprar en cuotas y sin tarjetas de crédito</p>
         </div>
-        <p><i class="fas fa-hand-holding-dollar"></i>Comprar en cuotas y sin tarjetas de crédito</p>
         <nav>
 
             <ul class="lista-superior">
@@ -32,8 +32,8 @@
                 <li><a href="ayuda">Ayuda</a></li>
             </ul>
             <ul class="lista-inferior">
-                <li><a href="sign-up">Creá tu cuenta <i class="fa-regular fa-id-card"></i></a></li>
-                <li><a href="log-in">Ingresá <i class="fa-solid fa-arrow-right-to-bracket"></i></a></li>
+                <li><a href="register">Creá tu cuenta <i class="fa-regular fa-id-card"></i></a></li>
+                <li><a href="login">Ingresá <i class="fa-solid fa-arrow-right-to-bracket"></i></a></li>
                 <li><a href="carrito">Mis compras <i class="fa-solid fa-basket-shopping"></i></a></li>
             </ul>
         </nav>
