--- a/public/css/home.css
+++ b/public/css/home.css
@@ -25,7 +25,10 @@ main section article.seccion__productos--tarjetas {
 }
 
 main section article div.descripcion {
+    box-sizing: border-box;
     border-top: 1px solid var(--grisC);
+    width: 100%;
+    max-width: 310px;
     padding: 15px;
     background-color: white;
     position: relative;
@@ -87,11 +90,38 @@ main section article h5 {
         display: none;
     }
 
-    main section article div {
+    main section article.seccion__productos--tarjetas:hover > div.descripcion {
+        display: block;
+        position: absolute;
+        z-index: 1;
+    }
+
+    main section article div.descripcion {
         box-shadow: 0px 0px 10px rgb(100, 100, 100);
+        display: none;
+        transition: all 450ms;
+    }
+
+    main section article div i {
+        transition: all 450ms;
+    }
+
+    main section article div i:hover {
+        transform: rotateZ(-90deg);
     }
 
     main section article h5 {
         display: flex;
     }
+
+    footer div.container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+
+    footer div article:hover > i {
+        color: var(--verde);
+    }
+
 }
